# sunwind

./: 1D.plot  2D_to_1D.pl  CMakeCache.txt  CMakeLists.txt  Makefile  README  clean.sh  cmake_install.cmake  gengraph.sh  main  main-parallel.cpp  main.cpp  maxima_analys.txt  maxima_analys_2.txt  maxima_analys_3.txt  maxima_analys_4.txt  out.plot  task.data
gnuplot/: head.gnuplot
src/bc/: BorderCondition.hpp  BorderConditionEarth.hpp
src/ca/: CASplitCondition.hpp  CASplitConditionEarthDipoleInitial.hpp  CASplitConditionStaticSplit (Eugene Molokov's conflicted copy 2011-06-14).hpp  CASplitConditionStaticSplit.hpp  CellArray.hpp  CellArrayInt.hpp  HierarchyCellArray.hpp
src/calculaters/: Calculater.hpp  CalculaterInt.hpp  HierarchyCalculater.hpp
src/cell/: Cell.hpp  CellInt.hpp  HierarchyCell.hpp  HierarchyRib.hpp  HierarchySide.hpp  Rib.hpp  RibInt.hpp  Side.hpp  SideInt.hpp
src/cgal/: QPCGAL.hpp  QPCGALF.hpp  QPCGALout.hpp
src/di/: DataInitiater.hpp  DataInitiaterForHierarchyCellArray.hpp  DataInitiaterTestRaspadRazriva.hpp  InitialParametersFunction.hpp  InitialParametersFunctionEarth.hpp
src/graph/: Visualizer.hpp  Visualizer1DPlot.hpp  Visualizer2DPlot.hpp
src/interp/: Interpolater.hpp
src/methods/: Method.hpp  MethodLaksaFridrikhsa.hpp  MethodLaksaFridrikhsaDipole.hpp
src/parallelism/: 1  Makefile  ParallelArray.hpp  Paralleltest  Paralleltest.cpp  gengraph.sh  graph-3-3-3-10.txt  graph-3-3-3-10.txt.grf  graph-3-3-3-10.txt.xyz
src/td/: TaskData.hpp
src/test/: TestHierarchyCellArrayLinks.hpp  TestObject.hpp  (+1 more)
test/: clean.sh
tmp/: tmp.cpp
(+40 files in other folders)
